[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "whatsapp-cloud-api"
version = "0.0.3"
authors = [
  { name="Shubham Gupta", email="gshubham533@gmail.com" },
  { name="Shlok Sawant", email="shlok.sawant5595@gmail.com" },
  { name="Suyog Surve", email="suyog45work@gmail.com" },
  { name="Shashank Singh", email="shashank8208@gmail.com" },
]
description = "WhatsApp Business API Python Library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Circuit-Minds/whatsapp-cloud-api"
"Bug Tracker" = "https://github.com/Circuit-Minds/whatsapp-cloud-api/issues"